added link to logo

--- a/src/components/footer/style.module.sass
+++ b/src/components/footer/style.module.sass
@@ -9,11 +9,12 @@ footer
     text-transform: uppercase
     margin-bottom: 24px
 .logo
-    font-family: $LexendSemiBold
-    font-size: 3.2rem
-    line-height: 32px
-    color: $colorMeeting
     margin-bottom: 24px
+    a
+        font-family: $LexendSemiBold
+        font-size: 3.2rem
+        line-height: 32px
+        color: $colorMeeting
 
 ul.nav
     display: flex
