--- a/src/components/header/style.module.sass
+++ b/src/components/header/style.module.sass
@@ -8,11 +8,12 @@ header
     padding-top: 24px
 
 .logo
-    font-family: $LexendSemiBold
-    font-size: 2.4rem
-    line-height: 24px
-    color: $colorMeeting
-    text-transform: uppercase
+    a
+        font-family: $LexendSemiBold
+        font-size: 2.4rem
+        line-height: 24px
+        color: $colorMeeting
+        text-transform: uppercase
 
 .nav
     display: flex
